server - [ update icon ]

--- a/cms/src/components/main/main.less
+++ b/cms/src/components/main/main.less
@@ -1,12 +1,16 @@
 .main{
   .logo-con{
-    height: 64px;
-    padding: 10px;
+    height: 58px;
+    padding: 8px 10px 5px;
+	display: flex;
+	flex-direction: row;
+	//border-bottom: 1px solid #333;
+	box-shadow: inset -6px -6px 8px -3px #333, inset 6px 6px 8px -3px #333;
     img{
-      height: 44px;
+      height: 30px;
       width: auto;
       display: block;
-      margin: 0 auto;
+      margin: 6px auto;
     }
   }
   .header-con{
